Simplify Vercel configuration for static hosting

--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,3 @@
 {
-  "name": "caselab-phonecase-landing",
-  "version": 2,
-  "builds": [
-    {
-      "src": "phonecase-landing.html",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/",
-      "dest": "/phonecase-landing.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/phonecase-landing.html"
-    }
-  ]
+  "version": 2
 }
